--- a/warcommands-app/src/app/commands-panel/commands/game-loop/game-loop.component.scss
+++ b/warcommands-app/src/app/commands-panel/commands/game-loop/game-loop.component.scss
@@ -1,6 +1,6 @@
 
 .game-loop-content {
-    min-width: 244px;
+    min-width: 234px;
 }
 
 .game-loop-start {
